# cpp-shm-stream

./: .clang-format  .clang-tidy  .clang-tidy-checker  .cmake-format.py  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  cspell.json  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  setup.bash
cmake/: ConfigureSanitizer.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in  namespaces.h
doc/sphinx/: CMakeLists.txt  start_auto_build.sh.in
doc/sphinx/src/: conf.py  convention.rst  how_to_build_in_repository.md  how_to_use.md  index.rst
include/shm_stream/: blocking_stream.h  bytes_view.h  common_types.h  light_stream.h  no_wait_stream.h  shm_stream_assert.h  shm_stream_exception.h  string_view.h  version.h
include/shm_stream/c_interface/: blocking_stream_common.h  blocking_stream_reader.h  blocking_stream_writer.h  bytes_view.h  common_types.h  error_codes.h  light_stream_common.h  light_stream_reader.h  light_stream_writer.h  string_view.h  translate_error.h
include/shm_stream/details/: atomic_index_pair.h  blocking_bytes_queue.h  cache_line_size.h  light_bytes_queue.h  no_wait_bytes_queue.h  smart_ptr.h  throw_if_error.h
scripts/: check_encoding.py  collect_llvm_coverage.sh  create_cpp_file.py  install_conan_dependencies.py  update_source_list.py
src/: CMakeLists.txt  source_list.cmake  unity_source.cpp
src/shm_stream/: light_stream.cpp  no_wait_stream.cpp
src/shm_stream/c_interface/: atomic_stream_internal.cpp  atomic_stream_internal.h  blocking_stream_common.cpp  blocking_stream_internal.cpp  blocking_stream_internal.h  blocking_stream_reader.cpp  blocking_stream_writer.cpp  error_codes.cpp  light_stream_common.cpp  light_stream_internal.cpp  light_stream_internal.h  light_stream_reader.cpp  light_stream_writer.cpp  translate_error.h
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt
tests/bench/ping_pong/: CMakeLists.txt  bench.py  common.h
tests/bench/ping_pong/client/: blocking_stream_test.cpp  command_client.cpp  command_client.h  light_stream_test.cpp  ping_pong_fixture.h  udp_test.cpp
tests/bench/ping_pong/server/: blocking_stream_server.cpp  blocking_stream_server.h  command_server.cpp  command_server.h  light_stream_server.cpp  light_stream_server.h  main.cpp  server_base.h  udp_server.cpp  udp_server.h
tests/bench/send_messages/: CMakeLists.txt  blocking_stream_test.cpp  light_stream_test.cpp  main.cpp  no_wait_stream_test.cpp  send_messages_fixture.h  udp_test.cpp
tests/include/shm_stream_test/: generate_data.h
tests/integ/: CMakeLists.txt  source_list.cmake  unity_source.cpp
tests/integ/blocking/: CMakeLists.txt  common_def.h  conftest.py  reader.cpp  test_blocking.py  writer.cpp
tests/integ/cpp_shm_stream/: no_wait_stream_test.cpp
tests/integ/in_process/: CMakeLists.txt  blocking_stream_test.cpp  light_stream_test.cpp
tests/integ/light/: CMakeLists.txt  common_def.h  conftest.py  reader.cpp  test_light.py  writer.cpp
tests/integ/no_wait/: CMakeLists.txt  common_def.h  conftest.py  reader.cpp  test_no_wait.py  writer.cpp
tests/integ/shm_stream/: no_wait_stream_test.cpp
tests/units/: CMakeLists.txt  dummy_test.cpp  source_list.cmake  unity_source.cpp
tests/units/cpp_shm_stream/details/: no_wait_bytes_queue_test.cpp
tests/units/shm_stream/: blocking_stream_test.cpp  light_stream_test.cpp  no_wait_stream_test.cpp  string_view_test.cpp
tests/units/shm_stream/c_interface/: c_headers.c  error_codes_test.cpp  translate_error_test.cpp
tests/units/shm_stream/details/: atomic_index_pair_test.cpp  blocking_bytes_queue_test.cpp  light_bytes_queue_test.cpp  no_wait_bytes_queue_test.cpp  smart_ptr_test.cpp
