[tool.poetry]
name = "cpp-shm-stream"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
breathe = "^4.35.0"
click = "^8.1.3"
cmakelang = "^0.6.13"
doc8 = "^0.11.2"
myst-parser = "^2.0.0"
pre-commit = "^3.3.3"
pylint = "^2.17.4"
sphinx = "^6.2.1"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.2.2"
sphinxcontrib-plantuml = "^0.25"
clang-tidy-checker = "^0.3.0"
lcov_cobertura = "^2.0.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long"
