[tool.poetry]
name = "cpp-shm-stream"
version = "0.0.0"
description = ""
authors = ["Kenta Kabashima <kenta_program37@hotmail.co.jp>"]
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
breathe = "^4.35.0"
click = "^8.1.7"
cmakelang = "^0.6.13"
doc8 = "^1.1.1"
myst-parser = "^2.0.0"
pre-commit = "^3.7.0"
pylint = "^3.1.0"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"
sphinx-orange-book-theme = "^0.7.0"
sphinxcontrib-plantuml = "^0.29"
clang-tidy-checker = "^0.5.0"
lcov_cobertura = "^2.0.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = "too-many-instance-attributes,line-too-long"
